@@ -27,6 +27,22 @@ class Admin::RunnersController < Admin::ApplicationController
     redirect_to admin_runners_path
   end
 
+  def resume
+    if @runner.update_attributes(active: true)
+      redirect_to admin_runners_path, notice: 'Runner was successfully updated.'
+    else
+      redirect_to admin_runners_path, alert: 'Runner was not updated.'
+    end
+  end
+
+  def pause
+    if @runner.update_attributes(active: false)
+      redirect_to admin_runners_path, notice: 'Runner was successfully updated.'
+    else
+      redirect_to admin_runners_path, alert: 'Runner was not updated.'
+    end
+  end
+
   def assign_all
     Project.unassigned(@runner).all.each do |project|
       @runner.assign_to(project, current_user)
