@@ -1,7 +1,7 @@
 class RunnersController < ApplicationController
   before_filter :authenticate_user!
   before_filter :project
-  before_filter :set_runner, only: [:edit, :update, :destroy]
+  before_filter :set_runner, only: [:edit, :update, :destroy, :pause, :resume]
   before_filter :authorize_access_project!
   before_filter :authorize_manage_project!
 
@@ -31,6 +31,22 @@ class RunnersController < ApplicationController
     end
 
     redirect_to project_runners_path(@project)
+  end
+
+  def resume
+    if @runner.update_attributes(active: true)
+      redirect_to project_runners_path(@project, @runner), notice: 'Runner was successfully updated.'
+    else
+      redirect_to project_runners_path(@project, @runner), alert: 'Runner was not updated.'
+    end
+  end
+
+  def pause
+    if @runner.update_attributes(active: false)
+      redirect_to project_runners_path(@project, @runner), notice: 'Runner was successfully updated.'
+    else
+      redirect_to project_runners_path(@project, @runner), alert: 'Runner was not updated.'
+    end
   end
 
   protected
