@@ -27,6 +27,9 @@
       %li
         %span.label.label-info specific
         \- run builds from assigned projects
+      %li
+        %span.label.label-danger paused
+        \- runner will not receive any new build
 
 
 
