@@ -2,6 +2,12 @@
 %hr
 = form_for [@project, @runner], html: { class: 'form-horizontal' } do |f|
   .form-group
+    = label :active, "Active", class: 'control-label'
+    .col-sm-10
+      .checkbox
+        = f.check_box :active
+        %span.light Paused runners don't accept new jobs
+  .form-group
     = label_tag :token, class: 'control-label' do
       Token
     .col-sm-10
