@@ -1,0 +1,5 @@
+class AddActiveToRunner < ActiveRecord::Migration
+  def change
+    add_column :runners, :active, :boolean, null: false, default: true
+  end
+end
